# leetcode_solutions

./: .gitignore  Cargo.toml  pyproject.toml  setup.py
.github/workflows/: ci.yaml
src/py_ans/: file_one.py  s0264_ugly_number2.py  s1513_number_substrings_ones.py  s2696_substring_length.py
src/py_ans/tests/: test_file_one.py
src/rs_ans/: main.rs  s0017_telephone_combinations.rs  s0027_remove_element.rs  s0070_climbing_stairs.rs  s0125_valid_palindrome.rs  s0219_contains_duplicate_bis.rs  s0525_contiguous_array.rs  s0836_rectangle_overlap.rs  s1232_straight_line.rs  s2108_first_palindrom.rs
