[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "py_ans"
authors = [
    {name = "Josiah Carberry", email = "josiah_carberry@brown.edu"},
]
description = "My package description"
readme = "README.rst"
requires-python = ">=3.8"
# keywords = ["one", "two"]
# license = {text = "BSD-3-Clause"}
# classifiers = [
#     "Framework :: Django",
#     "Programming Language :: Python :: 3",
# ]
dependencies = [
    "requests",
    'importlib-metadata; python_version>"3.10"',
    "pytest",
    "ipython",
]
dynamic = ["version"]

[options]
package_dir=["src/py_ans"]

# [project.optional-dependencies]
# pdf = ["ReportLab>=1.2", "RXP"]
# rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]



[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
ignore = [
    "E722",
    "B008",  # function call in defaults
    "I001",  # import order
    "PLC1901",  # truthy strings
]

select = [
    "E",
    "F",
    "W",
    "B",
    "I",
    "A",
    "PLC",
    "UP",
    "D",
]

pydocstyle.convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"lib/**/__init__.py" = ["D"]

[tool.isort]
known_first_party = ["module_name"]
profile = "black"
